--- a/alpha-bear/bear-web/docker/conf/custom.conf
+++ b/alpha-bear/bear-web/docker/conf/custom.conf
@@ -17,50 +17,31 @@
 
 		access_log		host.access.log	main;
 		error_log		host.error.log	error;
-		root			/usr/share/nginx/bond-web/src;
+		root			/usr/share/nginx/bear-web/src;
 
-		location /bond/api/ {
-			proxy_pass http://uums/;
-			proxy_set_header X-Proxy-IP $remote_addr;
-			proxy_set_header Cookie $http_cookie;
-		}
-		
-		location /boss/ {
-			proxy_pass http://boss/boss/;
+		location /bear/ {
+			proxy_pass http://bear/bear/;
 			proxy_set_header X-Proxy-IP $remote_addr;
 		}
 		
 		location = / {
-			return 301 /bond/login.html;
+			return 301 /bear/login.html;
 		}
 		
-		location = /bond/ {
+		location = /bear/ {
 			proxy_set_header Host $http_host;
-			set $flag 0;
 			if ($http_hostport) {
-				set $flag "${flag}1";
-			}
-			if ($http_ssl_client_serial) {
-				set $flag "${flag}2";
-			}
-			if ($flag = "01") {
-				return 301 http://$host:$http_hostport/bond/login.html;
+				return 301 http://$host:$http_hostport/bear/login.html;
 		    }
-		    if ($flag = "012") {
-				return 301 http://$host:$http_hostport/bond/elogin.html?ssl_cert=${http_ssl_client_serial};
-		    }
-		    if ($flag = "02") {
-				return 301 http://$host:$server_port/bond/elogin.html?ssl_cert=${http_ssl_client_serial};
-		    }
-			return 301 http://$host:$server_port/bond/login.html;
+			return 301 http://$host:$server_port/bear/login.html;
 		}
 		
-		location /bond/.*\.(css|js|swf|flash|gif|png|jpg|htm|html)$ {
-            alias  /usr/share/nginx/bond-web/src/;
+		location /bear/.*\.(css|js|swf|flash|gif|png|jpg|htm|html)$ {
+            alias  /usr/share/nginx/bear-web/src/;
   		}
 				
-		location /bond/ {
-			alias  /usr/share/nginx/bond-web/src/;
+		location /bear/ {
+			alias  /usr/share/nginx/bear-web/src/;
 			index  login.html;
 			try_files $uri $uri/ /login.html;
 		}
