--- a/alpha-bear/bear-service/src/main/resources/application.properties
+++ b/alpha-bear/bear-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/flowable?characterEncoding=UTF8
+spring:
+  datasource:
+    url:jdbc:mysql://localhost:3306/flowable?characterEncoding=UTF8
+    username:${DB_USERNAME:molly}
+    password:${DB_PASSWORD:molly}
+    driver-class-name:com.mysql.jdbc.Driver
 
-spring.datasource.username=molly
-
-spring.datasource.password=molly
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+    
