--- a/alpha-bear/bear-web/docker/conf/custom.conf
+++ b/alpha-bear/bear-web/docker/conf/custom.conf
@@ -19,28 +19,20 @@
 		error_log		host.error.log	error;
 		root			/usr/share/nginx/bear-web/src;
 
-		location /bear/ {
-			proxy_pass http://bear/bear/;
+		location /user/ {
+			proxy_pass http://user/user/;
 			proxy_set_header X-Proxy-IP $remote_addr;
 		}
 		
 		location = / {
-			return 301 /bear/login.html;
+			return 301 /login.html;
 		}
 		
-		location = /bear/ {
-			proxy_set_header Host $http_host;
-			if ($http_hostport) {
-				return 301 http://$host:$http_hostport/bear/login.html;
-		    }
-			return 301 http://$host:$server_port/bear/login.html;
-		}
-		
-		location /bear/.*\.(css|js|swf|flash|gif|png|jpg|htm|html)$ {
+		location /.*\.(css|js|swf|flash|gif|png|jpg|htm|html)$ {
             alias  /usr/share/nginx/bear-web/src/;
   		}
 				
-		location /bear/ {
+		location / {
 			alias  /usr/share/nginx/bear-web/src/;
 			index  login.html;
 			try_files $uri $uri/ /login.html;
