--- a/alpha-bear/bear-web/docker/conf/custom.conf
+++ b/alpha-bear/bear-web/docker/conf/custom.conf
@@ -19,8 +19,8 @@
 		error_log		host.error.log	error;
 		root			/usr/share/nginx/bear-web/src;
 
-		location /user/ {
-			proxy_pass http://user/user/;
+		location /bear/ {
+			proxy_pass http://bear/;
 			proxy_set_header X-Proxy-IP $remote_addr;
 		}
 		
