--- a/alpha-bear/bear-service/pom.xml
+++ b/alpha-bear/bear-service/pom.xml
@@ -3,14 +3,14 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.haah</groupId>
+    <groupId>com.haah.bear</groupId>
     <artifactId>alpha-bear</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>bear-service</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.haah</groupId>
+			<groupId>com.haah.bear</groupId>
 			<artifactId>bear-dbaccess</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
@@ -57,6 +57,16 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.haah.bear</groupId>
+			<artifactId>bear-model</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
