--- a/alpha-bear/pom.xml
+++ b/alpha-bear/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.haah</groupId>
+	<groupId>com.haah.bear</groupId>
 	<artifactId>alpha-bear</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -26,6 +26,8 @@
 	<modules>
 	  <module>bear-web</module>
 	  <module>bear-dbaccess</module>
+	  <module>bear-model</module>
+	  <module>bear-api-gateway</module>
 	  <module>bear-service</module>
 	</modules>
 
